--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,7 +20,9 @@ env:
 
 jobs:
   build-postgres:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: dev
+    container:
+      image: ghcr.io/catthehacker/ubuntu:act-22.04
     strategy:
       fail-fast: false
       matrix:
@@ -64,7 +66,9 @@ jobs:
 
 
   build-neon:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: dev
+    container:
+      image: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-postgres ]
     strategy:
       fail-fast: false
@@ -196,7 +200,9 @@ jobs:
 
 
   pg_regress-tests:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: dev
+    container:
+      image: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -223,7 +229,9 @@ jobs:
         uses: ./.github/actions/save-coverage-data
 
   other-tests:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: dev
+    container:
+      image: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -251,7 +259,7 @@ jobs:
   benchmarks:
     runs-on: dev
     container:
-      image: nikolaik/python-nodejs:latest
+      image: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -280,7 +288,9 @@ jobs:
       # while coverage is currently collected for the debug ones
 
   coverage-report:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: dev
+    container:
+      image: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ other-tests, pg_regress-tests ]
     strategy:
       fail-fast: false
@@ -358,7 +368,9 @@ jobs:
             }"
 
   trigger-e2e-tests:
-   runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: dev
+    container:
+      image: ghcr.io/catthehacker/ubuntu:act-22.04
    needs: [ build-neon ]
    steps:
      - name: Set PR's status to pending and request a remote CI test
