--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,9 +20,7 @@ env:
 
 jobs:
   build-postgres:
-    runs-on: dev
-    container:
-      image: ghcr.io/catthehacker/ubuntu:act-22.04
+    runs-on: [ self-hosted, Linux, k8s-runner ]
     strategy:
       fail-fast: false
       matrix:
@@ -66,9 +64,7 @@ jobs:
 
 
   build-neon:
-    runs-on: dev
-    container:
-      image: ghcr.io/catthehacker/ubuntu:act-22.04
+    runs-on: [ self-hosted, Linux, k8s-runner ]
     needs: [ build-postgres ]
     strategy:
       fail-fast: false
@@ -200,9 +196,7 @@ jobs:
 
 
   pg_regress-tests:
-    runs-on: dev
-    container:
-      image: ghcr.io/catthehacker/ubuntu:act-22.04
+    runs-on: [ self-hosted, Linux, k8s-runner ]
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -229,9 +223,7 @@ jobs:
         uses: ./.github/actions/save-coverage-data
 
   other-tests:
-    runs-on: dev
-    container:
-      image: ghcr.io/catthehacker/ubuntu:act-22.04
+    runs-on: [ self-hosted, Linux, k8s-runner ]
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -257,9 +249,7 @@ jobs:
         uses: ./.github/actions/save-coverage-data
 
   benchmarks:
-    runs-on: dev
-    container:
-      image: ghcr.io/catthehacker/ubuntu:act-22.04
+    runs-on: [ self-hosted, Linux, k8s-runner ]
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -288,9 +278,7 @@ jobs:
       # while coverage is currently collected for the debug ones
 
   coverage-report:
-    runs-on: dev
-    container:
-      image: ghcr.io/catthehacker/ubuntu:act-22.04
+    runs-on: [ self-hosted, Linux, k8s-runner ]
     needs: [ other-tests, pg_regress-tests ]
     strategy:
       fail-fast: false
@@ -368,9 +356,7 @@ jobs:
             }"
 
   trigger-e2e-tests:
-    runs-on: dev
-    container:
-      image: ghcr.io/catthehacker/ubuntu:act-22.04
+    runs-on: [ self-hosted, Linux, k8s-runner ]
    needs: [ build-neon ]
    steps:
      - name: Set PR's status to pending and request a remote CI test
