--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,8 +20,10 @@ env:
 
 jobs:
   build-postgres:
-    runs-on: dev
-      container: ghcr.io/catthehacker/ubuntu:act-22.04
+    name: 'build-postgres'
+    runs-on: [ dev ]
+    container:
+      image: node:18-bullseye
     strategy:
       fail-fast: false
       matrix:
@@ -65,8 +67,7 @@ jobs:
 
 
   build-neon:
-    runs-on: dev
-      container: ghcr.io/catthehacker/ubuntu:act-22.04
+    runs-on: [ self-hosted, Linux, k8s-runner ]
     needs: [ build-postgres ]
     strategy:
       fail-fast: false
