--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -66,7 +66,8 @@ jobs:
 
 
   build-neon:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: [ dev ]
+    container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-postgres ]
     strategy:
       fail-fast: false
@@ -198,7 +199,8 @@ jobs:
 
 
   pg_regress-tests:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: [ dev ]
+    container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -225,7 +227,8 @@ jobs:
         uses: ./.github/actions/save-coverage-data
 
   other-tests:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: [ dev ]
+    container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -251,7 +254,8 @@ jobs:
         uses: ./.github/actions/save-coverage-data
 
   benchmarks:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: [ dev ]
+    container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -280,7 +284,8 @@ jobs:
       # while coverage is currently collected for the debug ones
 
   coverage-report:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: [ dev ]
+    container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ other-tests, pg_regress-tests ]
     strategy:
       fail-fast: false
@@ -358,7 +363,8 @@ jobs:
             }"
 
   trigger-e2e-tests:
-   runs-on: [ self-hosted, Linux, k8s-runner ]
+    runs-on: [ dev ]
+    container: ghcr.io/catthehacker/ubuntu:act-22.04
    needs: [ build-neon ]
    steps:
      - name: Set PR's status to pending and request a remote CI test
