--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -66,6 +66,7 @@ jobs:
 
 
   build-neon:
+    name: 'build-neon'
     runs-on: [ dev ]
     container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-postgres ]
@@ -199,6 +200,7 @@ jobs:
 
 
   pg_regress-tests:
+    name: 'pg_regress-tests'
     runs-on: [ dev ]
     container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
@@ -227,6 +229,7 @@ jobs:
         uses: ./.github/actions/save-coverage-data
 
   other-tests:
+    name: 'other-tests'
     runs-on: [ dev ]
     container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
@@ -254,6 +257,7 @@ jobs:
         uses: ./.github/actions/save-coverage-data
 
   benchmarks:
+    name: 'benchmarks'
     runs-on: [ dev ]
     container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
@@ -284,6 +288,7 @@ jobs:
       # while coverage is currently collected for the debug ones
 
   coverage-report:
+    name: 'coverage-report'
     runs-on: [ dev ]
     container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ other-tests, pg_regress-tests ]
@@ -363,6 +368,7 @@ jobs:
             }"
 
   trigger-e2e-tests:
+    name: 'trigger-e2e-tests'
     runs-on: [ dev ]
     container: ghcr.io/catthehacker/ubuntu:act-22.04
    needs: [ build-neon ]
