--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -200,7 +200,9 @@ jobs:
 
 
   pg_regress-tests:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    name: 'pg_regress-tests'
+    runs-on: [ dev ]
+    container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -360,7 +362,7 @@ jobs:
             }"
 
   trigger-e2e-tests:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+   runs-on: [ self-hosted, Linux, k8s-runner ]
    needs: [ build-neon ]
    steps:
      - name: Set PR's status to pending and request a remote CI test
