--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -229,7 +229,9 @@ jobs:
         uses: ./.github/actions/save-coverage-data
 
   other-tests:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    name: 'other-tests'
+    runs-on: [ dev ]
+    container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -255,7 +257,9 @@ jobs:
         uses: ./.github/actions/save-coverage-data
 
   benchmarks:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    name: 'benchmarks'
+    runs-on: [ dev ]
+    container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ build-neon ]
     strategy:
       fail-fast: false
@@ -284,7 +288,9 @@ jobs:
       # while coverage is currently collected for the debug ones
 
   coverage-report:
-    runs-on: [ self-hosted, Linux, k8s-runner ]
+    name: 'coverage-report'
+    runs-on: [ dev ]
+    container: ghcr.io/catthehacker/ubuntu:act-22.04
     needs: [ other-tests, pg_regress-tests ]
     strategy:
       fail-fast: false
@@ -362,7 +368,9 @@ jobs:
             }"
 
   trigger-e2e-tests:
-   runs-on: [ self-hosted, Linux, k8s-runner ]
+   name: 'trigger-e2e-tests'
+   runs-on: [ dev ]
+   container: ghcr.io/catthehacker/ubuntu:act-22.04
    needs: [ build-neon ]
    steps:
      - name: Set PR's status to pending and request a remote CI test
